--- a/index.html
+++ b/index.html
@@ -1,18 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CODERHOUSE | Alex Zorzin</title>
-   
-</head>
-<body>
-    <h1>Algoritmo</h1>
-    <hr>
-    <p>
-        Un algoritmo con instrucciones condicionales en JavaScript se basa en un conjunto de funciones que se necesitan para realizar cierta acción y funcionan a partir de una condición.
-    </p>
-    <script src="./js/main.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="author" content="Alex Zorzin" />
+        <meta name="description" content="Buy now the best software on the market on our page. Safe and cheaper">
+        <meta name="keywords" content="SoftZWare Games Antivirus Office Cheap OpenSource "/>
+        <title>Home | SoftZWare</title>
+        <link rel="icon" type="image/-icon" href="assets/iconsoftzware.png" />
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+        <!-- Stylesheet -->
+        <link rel="stylesheet" href="./css/styles.css">
+        <!-- wow.js -->
+        <link rel="stylesheet" href="./css/animate.css">
+        <!-- Fontello Icons -->
+        <link rel="stylesheet" href="./css/fontello.css">
+        <!-- JS DESAFIO -->
+        <script src="./js/main.js"></script>
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="index.html"><img class="w-50 ms-n4" src="assets/logosoftzware.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="games.html">Games</a></li>
+                        <li class="nav-item"><a class="nav-link" href="antivirus.html">Antivirus</a></li>
+                        <li class="nav-item"><a class="nav-link" href="office.html">Office</a></li>
+                        <li class="nav-item"><a class="nav-link" href="opensource.html">Open-Source Software</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Header-->
+        <header class="masthead text-center text-white">
+            <div class="masthead-content col-12">
+                <div class="container px-5">
+                    <h1 class="masthead-heading-home mb-0">SoftZWare</h1>
+                    <h2 class="masthead-subheading mb-0">Download your favourite software here!</h2>
+                    <a class="btn btn-gradient btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                </div>
+            </div>
+        </header>
+        <section class="animation--hide">
+        <!-- Content section 1-->
+        <section id="scroll">
+            <div class="container px-5 border mt-3">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="p-5 center"><img class="img-fluid w-75 wow animate__animated animate__fadeInRight" src="assets/img/PlayStationLogo.png" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="p-5 home__text">
+                            <h2 class="display-4">PlayStation games in offer!</h2>
+                            <p class="fst-italic fs-5">Buy now the games you always wanted cheap!
+                                You can play for a really low price games like FIFA 21, Resident Evil: Village, Battlefield V, and more in our catalog.</p>
+                            <a href="./games.html"><input class="btn btn-gradient rounded-pill" type="button" value="Click Here"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Content section 2-->
+        <section>
+            <div class="container px-5 border mt-3">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="p-5 center"><img class="img-fluid w-75 wow animate__animated animate__fadeInLeft" src="assets/img/Antivirus.png" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-5 home__text">
+                            <h2 class="display-4">Buy the best antivirus here!</h2>
+                            <p class="fst-italic fs-5">Stay safe with the best antivirus of the market at a lower price than other stores.</p>
+                            <a href="./antivirus.html"><input class="btn btn-gradient rounded-pill" type="button" value="Click Here"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Content section 3-->
+        <section>
+            <div class="container px-5 border mt-3">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="p-5 center"><img class="img-fluid w-75 wow animate__animated animate__fadeInRight" src="assets/img/OfficePackage.png" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="p-5 home__text">
+                            <h2 class="display-4">Microsoft Office 365 at a 35% discount</h2>
+                            <p class="fst-italic fs-5">Buy the Office package offered by Microsoft for your work or university at a fairly cheap price and get discounts on your next purchases.</p>
+                            <a href="./office.html"><input class="btn btn-gradient rounded-pill" type="button" value="Click Here"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+             <!-- Content section 4-->
+        <section>
+            <div class="container px-5 border mt-3">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="p-5 center"><img class="img-fluid w-75 wow animate__animated animate__fadeInLeft" src="assets/img/OpenSource.png" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-5 home__text">
+                            <h2 class="display-4">Download Open Source Software</h2>
+                            <p class="fst-italic fs-5">In this section we will show you what an open source program is and its dangers. We offer you these programs previously analyzed by the best antivirus. So don't worry because we will never offer you an infected file.</p>
+                            <a href="./opensource.html"><input class="btn btn-gradient rounded-pill" type="button" value="Click Here"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </section>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-dark text-muted mt-3 pb-3">
+    <!-- Section: Links  -->
+    <section class="pt-2">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <a class="footer__title" href="index.html"> <img class="me-2" src="./assets/iconsoftzware.png" alt="logo">softzware</a>
+            </h6>
+            <p>
+              Buy your favourite software cheaply and 100% safely. You can pay by many payment methods such as MercadoPago, RapiPago, PagoFacil or by bank transfer.
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4 footer__title">
+              Products
+            </h6>
+            <p>
+              <a href="./office.html" class="text-reset footer__text small">Office</a>
+            </p>
+            <p>
+              <a href="./antivirus.html" class="text-reset footer__text small">Antivirus</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4 footer__title">
+              Useful links
+            </h6>
+            <p>
+              <a href="./games.html" class="text-reset footer__text small">Games</a>
+            </p>
+            <p>
+              <a href="./opensource.html" class="text-reset footer__text small">Open-Source Software</a>
+            </p>
+            <p>
+              <a href="./contact.html" class="text-reset footer__text small">Contact us</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4 footer__title">
+              Contact
+            </h6>
+            <div>
+                <a class="icon-mail footer__text small mb-1" href="#!"> Support@SoftZWare.com</a>
+                <a class="icon-whatsapp footer__text small mb-1" href="#!"> +54 9 11-1111-1111</a>
+                <a class="icon-twitter footer__text small mb-1" href="#!"> @softzware</a>
+                <a class="icon-instagram footer__text small mb-1" href="#!"> @softzware</a>
+            </div>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+    <div>
+        <p class="m-0 text-center text-white small">Copyright © SoftZWare 2021</p>
+    </div>
+  </footer>
+  <!-- Footer -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
+    </body>
 </html>
