--- a/index.html
+++ b/index.html
@@ -1,67 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="author" content="Alex Zorzin" />
-        <meta name="description" content="Buy now the best software on the market on our page. Safe and cheaper">
-        <meta name="keywords" content="SoftZWare Games Antivirus Office Cheap OpenSource "/>
-        <title>Catálogo | SoftZWare</title>
-        <link rel="icon" type="image/-icon" href="./assets/iconsoftzware.png" />
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-        <!-- Stylesheet -->
-        <link rel="stylesheet" href="./css/styles.css">
-        <!-- wow.js -->
-        <link rel="stylesheet" href="./css/animate.css">
-        <!-- Fontello Icons -->
-        <link rel="stylesheet" href="./css/fontello.css">
-        
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><img class="w-50 ms-n4" src="assets/logosoftzware.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="games.html">Games</a></li>
-                        <li class="nav-item"><a class="nav-link" href="antivirus.html">Antivirus</a></li>
-                        <li class="nav-item"><a class="nav-link" href="office.html">Office</a></li>
-                        <li class="nav-item"><a class="nav-link" href="opensource.html">Open-Source Software</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
-                    </ul>
-                    <a id="boton-carrito"><i class="icon-basket ms-2"></i><span id="contadorCarrito">0</span></a>
-                </div>
-            </div>
-        </nav>
-        <!-- Header-->
-        <header class="masthead text-center text-white">
-            <div class="masthead-content col-12">
-                <div class="container px-5">
-                    <h1 class="masthead-heading-home mb-0">Catálogo</h1>
-                    <h2 class="masthead-subheading mb-0">Aquí encontrarás todos nuestros productos</h2>
-                    <a class="btn btn-gradient btn-xl rounded-pill mt-5" href="#contenedor-productos">Ver todos</a>
-                </div>
-            </div>
-        </header>
-          <div class="container">
-            <div class="row">
-              <select class="form-select" id="selecTipo">
-                <option value="all">Todos</option>
-                <option value="Programas">Programas</option>
-                <option value="Juegos">Juegos</option>
-            </select>
-            </div>
-          </div>
-        <!--Catalogo-->
-        <main id="contenedor-productos" class="row gx-5"></main>
 
-<!-- Footer -->
-<footer class="text-center text-lg-start bg-dark text-muted mt-3 pb-3">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="author" content="Alex Zorzin" />
+  <meta name="description" content="Buy now the best software on the market on our page. Safe and cheaper">
+  <meta name="keywords" content="SoftZWare Games Antivirus Office Cheap OpenSource " />
+  <title>Catálogo | SoftZWare</title>
+  <link rel="icon" type="image/-icon" href="./assets/iconsoftzware.png" />
+  <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+    rel="stylesheet" />
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="./css/styles.css">
+  <!-- wow.js -->
+  <link rel="stylesheet" href="./css/animate.css">
+  <!-- Fontello Icons -->
+  <link rel="stylesheet" href="./css/fontello.css">
+
+</head>
+
+<body id="page-top">
+  <!-- loader -->
+  <div id="loader">
+    <img class="loader__imagen" src="./assets/img/loader.png" alt="logosoftzware">
+  </div>
+  <!-- <div id="loading"></div> -->
+
+  <!-- Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img class="w-50 ms-n4" src="assets/logosoftzware.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
+          class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="games.html">Games</a></li>
+          <li class="nav-item"><a class="nav-link" href="antivirus.html">Antivirus</a></li>
+          <li class="nav-item"><a class="nav-link" href="office.html">Office</a></li>
+          <li class="nav-item"><a class="nav-link" href="opensource.html">Open-Source Software</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+        </ul>
+        <a id="boton-carrito"><i class="icon-basket ms-2"></i><span id="contadorCarrito">0</span></a>
+      </div>
+    </div>
+  </nav>
+  <!-- Header-->
+  <header class="masthead text-center text-white">
+    <div class="masthead-content col-12">
+      <div class="container px-5">
+        <h1 class="masthead-heading-home mb-0">Catálogo</h1>
+        <h2 class="masthead-subheading mb-0">Aquí encontrarás todos nuestros productos</h2>
+        <a class="btn btn-gradient btn-xl rounded-pill mt-5" href="#contenedor-productos">Ver todos</a>
+      </div>
+    </div>
+  </header>
+  <!-- <div class="container">
+    <div class="row">
+      <select class="form-select" id="selecTipo">
+        <option value="all">Todos</option>
+        <option value="Programas">Programas</option>
+        <option value="Juegos">Juegos</option>
+      </select>
+    </div>
+  </div> -->
+
+  <!--Catalogo-->
+  <main id="contenedor-productos" class="row gx-5"></main>
+
+  <!-- Footer -->
+  <footer class="text-center text-lg-start bg-dark text-muted mt-3 pb-3">
     <!-- Section: Links  -->
     <section class="pt-2">
       <div class="container text-center text-md-start mt-5">
@@ -71,14 +83,16 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <a class="footer__title" href="index.html"> <img class="me-2" src="./assets/iconsoftzware.png" alt="logo">softzware</a>
+              <a class="footer__title" href="index.html"> <img class="me-2" src="./assets/iconsoftzware.png"
+                  alt="logo">softzware</a>
             </h6>
             <p>
-              Buy your favourite software cheaply and 100% safely. You can pay by many payment methods such as MercadoPago, RapiPago, PagoFacil or by bank transfer.
+              Buy your favourite software cheaply and 100% safely. You can pay by many payment methods such as
+              MercadoPago, RapiPago, PagoFacil or by bank transfer.
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -93,7 +107,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -111,7 +125,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
@@ -119,10 +133,10 @@
               Contact
             </h6>
             <div>
-                <a class="icon-mail footer__text small mb-1" href="#!"> Support@SoftZWare.com</a>
-                <a class="icon-whatsapp footer__text small mb-1" href="#!"> +54 9 11-1111-1111</a>
-                <a class="icon-twitter footer__text small mb-1" href="#!"> @softzware</a>
-                <a class="icon-instagram footer__text small mb-1" href="#!"> @softzware</a>
+              <a class="icon-mail footer__text small mb-1" href="#!"> Support@SoftZWare.com</a>
+              <a class="icon-whatsapp footer__text small mb-1" href="#!"> +54 9 11-1111-1111</a>
+              <a class="icon-twitter footer__text small mb-1" href="#!"> @softzware</a>
+              <a class="icon-instagram footer__text small mb-1" href="#!"> @softzware</a>
             </div>
           </div>
           <!-- Grid column -->
@@ -132,26 +146,31 @@
     </section>
     <!-- Section: Links  -->
     <div>
-        <p class="m-0 text-center text-white small">Copyright © SoftZWare 2021</p>
+      <p class="m-0 text-center text-white small">Copyright © SoftZWare 2021</p>
     </div>
   </footer>
   <!-- Footer -->
   <div class="modal-contenedor">
     <div class="modal-carrito">
-        <h3>Carrito de compras | SoftZWare</h3>
-        <button id="carritoCerrar"><i class="fas fa-times-circle"></i></button>
-        <div id="carrito-contenedor">
-        </div>
-        <p class="precioProducto">Precio total: $<span id="precioTotal"></span></p>
+      <h3>Carrito de compras | SoftZWare</h3>
+      <button id="carritoCerrar"><i class="fas fa-times-circle"></i></button>
+      <div id="carrito-contenedor">
+      </div>
+      <p class="precioProducto">Precio total: $<span id="precioTotal"></span></p>
     </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/wow.min.js"></script>
-              <script>
-              new WOW().init();
-              </script>
-              <script src="./js/stock.js"></script>
-              <script src="./js/modal.js"></script>
-              <script src="./js/app.js"></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/toastr.min.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/loader.js"></script>
+</body>
+
 </html>
